# convention25

./: config.json  pyproject.toml  turtlesim.py
src/: __init__.py  __main__.py  colorful.py  config.py  designer.py  emergency_trap.py  io.py  optimizer.py  printer.py  sizing.py  slicer.py  storage.py  util.py
src/slicer/: __init__.py  visualizer.py
src/slicer/optimizer/: __init__.py  colinear_opt.py  sort_path_opt.py  sort_tool_opt.py
static/: index.html  manifest.json  printer.html  simple.html  sw.js
swarm/: __init__.py  serialhandler.py  swarm.py
