[project]
name = "convention25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "vpype[all]>=1.15.0",
    "vpype-gcode>=0.13.0",
    "svgpathtools>=1.7.1",
    "pyserial>=3.5",
    "fastapi[all]>=0.116.1",
]
